# kumagawa

./: .env  Cargo.toml  README.md
src/: main.rs
src/schemas/: mod.rs
src/schemas/create_music/: mod.rs
src/schemas/create_music/request_params/: mod.rs
src/schemas/create_music/request_params/attributes/: mod.rs  prompt.rs
src/schemas/create_music/response_params/: attributes.rs  mod.rs  music_links.rs
